--- a/wiki/fr/TechDraw_ExtensionCascadeObliqueDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCascadeObliqueDimension.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionCascadeObliqueDimension/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionCascadeObliqueDimension&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionCascadeObliqueDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungSchr&auml;geMa&szlig;eAnordnen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionCascadeObliqueDimension.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionCascadeObliqueDimension (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ExtensionCascadeObliqueDimension.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw&#720; Distanzia in Parallelo Quote Oblique (78% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_ExtensionCascadeObliqueDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Wymiar uko&#347;ny kaskadowo (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
@@ -58,15 +58,13 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>Sp&eacute;cifiez &agrave; votre convenance l'espacement de la cascade avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
+<ol><li>Vous pouvez sp&eacute;cifier l'espacement de la cascade avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
 <li>S&eacute;lectionnez deux ou plusieurs cotes inclin&eacute;es parall&egrave;les.</li>
 <li>La premi&egrave;re cote d&eacute;finit la position. Cette cote ne sera pas d&eacute;plac&eacute;e, les autres cotes seront positionn&eacute;es par rapport &agrave; cette cote.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCascadeObliqueDimension.svg&amp;filetimestamp=20240707201053&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCascadeObliqueDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Cascader les cotes inclin&eacute;es</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Extensions&nbsp;: attributs/modifications &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCascadeObliqueDimension.svg&amp;filetimestamp=20240707201053&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCascadeObliqueDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cascader les cotes inclin&eacute;es</b> &agrave; partir du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Cascade Oblique Dimensions &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCascadeObliqueDimension.svg&amp;filetimestamp=20240707201053&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCascadeObliqueDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cascader les cotes inclin&eacute;es</b> &agrave; partir du menu.</li></ul></li>
 <li>Les cotes sont uniform&eacute;ment espac&eacute;es.</li></ol>
-</div>
 <p><br>
 </p>
 <div class="docnav">
@@ -114,34 +112,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124190144
+Cached time: 20260124190232
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.079 seconds
-Real time usage: 0.129 seconds
-Preprocessor visited node count: 347/1000000
-Post&#8208;expand include size: 25985/2097152 bytes
-Template argument size: 10364/2097152 bytes
+CPU time usage: 0.070 seconds
+Real time usage: 0.105 seconds
+Preprocessor visited node count: 346/1000000
+Post&#8208;expand include size: 25975/2097152 bytes
+Template argument size: 10354/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1406/5000000 bytes
+Unstrip post&#8208;expand size: 1410/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.579      1 -total
- 34.23%    9.441      1 Template:TechDraw_Tools_navi/fr
- 22.18%    6.117      2 Template:Navigation_menu_2
- 15.33%    4.227      1 Template:GuiCommand/fr
- 14.40%    3.972      1 Template:Userdocnavi/fr
- 10.28%    2.834      1 Template:Caption
- 10.25%    2.827      2 Template:Docnav/fr
-  6.44%    1.777      1 Template:Button
-  5.70%    1.571      1 Template:MenuCommand
+100.00%   17.755      1 -total
+ 38.51%    6.838      1 Template:TechDraw_Tools_navi/fr
+ 28.54%    5.067      2 Template:Navigation_menu_2
+ 16.43%    2.917      1 Template:Userdocnavi/fr
+ 11.11%    1.973      2 Template:Docnav/fr
+ 10.85%    1.926      1 Template:GuiCommand/fr
+  7.01%    1.244      1 Template:Button
+  6.60%    1.172      1 Template:Caption
+  6.31%    1.121      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277647-0!canonical and timestamp 20260124190144 and revision id 1743476. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277647-0!canonical and timestamp 20260124190232 and revision id 1743478. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
