--- a/wiki/fr/TechDraw_ExtensionCascadeVertDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCascadeVertDimension.html
@@ -58,7 +58,7 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<ol><li>Sp&eacute;cifiez &agrave; votre convenance l'espacement de la cascade avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>. <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
+<ol><li>Vous pouvez sp&eacute;cifier l'espacement de la cascade avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>. <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
 <li>S&eacute;lectionnez deux ou plusieurs cotes verticales.</li>
 <li>La premi&egrave;re cote d&eacute;finit la position. Cette cote ne sera pas d&eacute;plac&eacute;e, les autres cotes seront positionn&eacute;es par rapport &agrave; cette cote.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
@@ -116,12 +116,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124190057
+Cached time: 20260124190307
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.068 seconds
-Real time usage: 0.109 seconds
+Real time usage: 0.101 seconds
 Preprocessor visited node count: 356/1000000
 Post&#8208;expand include size: 26153/2097152 bytes
 Template argument size: 10474/2097152 bytes
@@ -132,18 +132,18 @@ Unstrip post&#8208;expand size: 1395/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.390      1 -total
- 26.15%    6.379      1 Template:TechDraw_Tools_navi/fr
- 19.91%    4.855      2 Template:Navigation_menu_2
- 15.63%    3.813      1 Template:Userdocnavi/fr
- 13.09%    3.192      1 Template:GuiCommand/fr
- 12.30%    3.000      1 Template:Button
- 11.34%    2.766      2 Template:Docnav/fr
- 10.02%    2.445      1 Template:Caption
-  9.05%    2.208      1 Template:MenuCommand
+100.00%   16.605      1 -total
+ 33.12%    5.499      1 Template:TechDraw_Tools_navi/fr
+ 25.13%    4.172      2 Template:Navigation_menu_2
+ 20.93%    3.475      1 Template:Userdocnavi/fr
+ 11.85%    1.968      1 Template:GuiCommand/fr
+ 11.55%    1.918      2 Template:Docnav/fr
+  7.53%    1.250      1 Template:Caption
+  6.01%    0.998      1 Template:Button
+  5.84%    0.969      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277635-0!canonical and timestamp 20260124190056 and revision id 1743474. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277635-0!canonical and timestamp 20260124190307 and revision id 1743482. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
